--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id "io.freefair.lombok" version "8.4"
 }
 
 group 'org.example'
@@ -20,7 +21,7 @@ sourceSets {
 }
 dependencies {
     implementation group: 'org.testng', name: 'testng', version: '7.8.0'
-    implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.14.1'
+    implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.15.0'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: log4jVersion
     implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: log4jVersion
     implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: log4jVersion
@@ -30,9 +31,17 @@ dependencies {
     implementation 'com.epam.reportportal:logger-java-log4j:5.1.8'
     implementation group: 'commons-io', name: 'commons-io', version: '2.15.0'
     implementation 'org.projectlombok:lombok:1.18.30'
+    implementation(group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.10.1')
+    implementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.10.1'
+    implementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.10.1'
+
+}
+
+task testJ(type: Test) {
+    useJUnitPlatform {}
 }
 
 test {
     testLogging.showStandardStreams = true
-    useTestNG()
+    useTestNG {}
 }
