--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     implementation(group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.10.1')
     implementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.10.1'
     implementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.10.1'
+    implementation group: 'org.apache.commons', name: 'commons-configuration2', version: '2.9.0'
+
 
 }
 
