--- a/build.gradle
+++ b/build.gradle
@@ -35,8 +35,7 @@ dependencies {
     implementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.10.1'
     implementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.10.1'
     implementation group: 'org.apache.commons', name: 'commons-configuration2', version: '2.9.0'
-
-
+    implementation group: 'com.google.inject', name: 'guice', version: '7.0.0'
 }
 
 task testJ(type: Test) {
