--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'java'
+    id "java"
     id "io.freefair.lombok" version "8.4"
 }
 
@@ -31,11 +31,13 @@ dependencies {
     implementation 'com.epam.reportportal:logger-java-log4j:5.1.8'
     implementation group: 'commons-io', name: 'commons-io', version: '2.15.0'
     implementation 'org.projectlombok:lombok:1.18.30'
-    implementation(group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.10.1')
+    implementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.10.1'
     implementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.10.1'
     implementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.10.1'
-    implementation group: 'org.apache.commons', name: 'commons-configuration2', version: '2.9.0'
     implementation group: 'com.google.inject', name: 'guice', version: '7.0.0'
+    implementation group: 'io.cucumber', name: 'cucumber-java', version: '7.14.0'
+    implementation group: 'io.cucumber', name: 'cucumber-testng', version: '7.14.0'
+    implementation group: 'io.cucumber', name: 'cucumber-picocontainer', version: '7.14.0'
 }
 
 task testJ(type: Test) {
@@ -45,6 +47,7 @@ task testJ(type: Test) {
 }
 
 test {
+//    useJUnitPlatform{}
     def runSuite = project.hasProperty("suite")
     testLogging.showStandardStreams = true
     useTestNG {
