--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -4,3 +4,4 @@ default.login.name=default
 default.password=1q2w3e
 admin.login.name=superadmin
 admin.password=erebus
+admin.project.name=superadmin_personal
