--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ sourceSets {
         }
     }
 }
+
 dependencies {
     implementation group: 'org.testng', name: 'testng', version: '7.8.0'
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.15.0'
@@ -40,10 +41,12 @@ dependencies {
     implementation group: 'io.cucumber', name: 'cucumber-picocontainer', version: '7.14.0'
     // https://mvnrepository.com/artifact/io.rest-assured/rest-assured
     implementation group: 'io.rest-assured', name: 'rest-assured', version: '5.3.2'
-// https://mvnrepository.com/artifact/org.apache.httpcomponents.client5/httpclient5
+    // https://mvnrepository.com/artifact/org.apache.httpcomponents.client5/httpclient5
     implementation group: 'org.apache.httpcomponents.client5', name: 'httpclient5', version: '5.2.3'
     // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.16.0'
+    // https://mvnrepository.com/artifact/com.codeborne/selenide
+    implementation group: 'com.codeborne', name: 'selenide', version: '7.0.4'
 }
 
 task testJ(type: Test) {
