--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,14 @@
 plugins {
     id "java"
     id "io.freefair.lombok" version "8.4"
+    id "org.sonarqube" version "4.4.1.3373"
+}
+
+sonar {
+    properties {
+        property "sonar.projectKey", "atm-advanced"
+        property "sonar.projectName", "atm-advanced"
+    }
 }
 
 group 'org.example'
