--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -5,3 +5,6 @@ default.password=1q2w3e
 admin.login.name=superadmin
 admin.password=erebus
 admin.project.name=superadmin_personal
+
+email.url=valeriya.anatolyevna@gmail.com
+jira.url=https://atm-advanced.atlassian.net
